Refactor websocket subscriptions, add repository and sql queries package